# pymates

./: .gitignore  LICENSE  README.md  setup.cfg
src/pymates/: dom.py  evaluator.py  fonts.py  generator.py  lom.py  mainwindow.py  markdown.py  parser.py  pdf.py  pdfbackend.py  qtbackend.py  scanner.py  sizes.py  treeify.py  units.py  viewer.py
test/: example1.md  slides.md
