[metadata]
# replace with your username:
name = pymates
version = 0.0.1
author = Torben Weis
author_email = torben.weis@gmail.com
description = Pythonic Markdown Text System
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/weistn/pymates
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    pyside6 >=6.0.0

[options.packages.find]
where = src